--- a/SASS/components/_header.scss
+++ b/SASS/components/_header.scss
@@ -53,7 +53,7 @@
 .logo {
     width: 145px;
     height: 31px;
-    font-family: getFont('Raleway-font'), sans-serif;
+    font-family: getFonts('Raleway-font');
     font-weight: 700;
     font-size: 26px;
     line-height: 1.19;
