--- a/SASS/components/_portfolio-bth.scss
+++ b/SASS/components/_portfolio-bth.scss
@@ -17,7 +17,7 @@
     border: getColor('fifth');
     color: getColor('primary');
     text-align: center;
-    font-family: 'Roboto';
+    font-family: getFonts('Roboto-font');
     font-size: 16px;
     font-style: normal;
     font-weight: 500;
