--- a/CSS/main.css
+++ b/CSS/main.css
@@ -20,7 +20,7 @@ use {
 }
 
 body {
-  font-family: "Roboto", sans-serif;
+  font-family: Roboto, sans-serif;
 }
 
 .contanier {
@@ -80,7 +80,7 @@ body {
 .logo {
   width: 145px;
   height: 31px;
-  font-family: getFont("Raleway-font"), sans-serif;
+  font-family: Raleway, sans-serif;
   font-weight: 700;
   font-size: 26px;
   line-height: 1.19;
@@ -365,7 +365,7 @@ body {
   margin: 0 30px 0 0;
 }
 .features-list__subtitle {
-  font-family: "Roboto";
+  font-family: Roboto, sans-serif;
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
@@ -373,7 +373,7 @@ body {
   margin-bottom: 10px;
 }
 .features-list__paragraf {
-  font-family: "Roboto";
+  font-family: Roboto, sans-serif;
   font-weight: 400;
   font-size: 14px;
   line-height: 1.71;
@@ -429,7 +429,7 @@ body {
   padding-top: 27px;
   background: rgba(47, 48, 58, 0.8);
   color: #FFF;
-  font-family: "Roboto";
+  font-family: Roboto, sans-serif;
   font-size: 14px;
   font-weight: 700;
   letter-spacing: 0.42px;
@@ -468,7 +468,7 @@ body {
 }
 .people-list__name {
   text-align: center;
-  font-family: "Roboto";
+  font-family: Roboto, sans-serif;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.18;
@@ -477,7 +477,7 @@ body {
 }
 .people-list__work {
   text-align: center;
-  font-family: "Roboto";
+  font-family: Roboto, sans-serif;
   font-weight: 400;
   font-size: 16px;
   line-height: 1.18;
@@ -565,7 +565,7 @@ body {
   height: 252px;
 }
 .footer__logo {
-  font-family: "Raleway", sans-serif;
+  font-family: Raleway, sans-serif;
   font-weight: 700;
   font-size: 26px;
   line-height: 1.19;
