--- a/CSS/portfolio.css
+++ b/CSS/portfolio.css
@@ -20,7 +20,7 @@ use {
 }
 
 body {
-  font-family: "Roboto", sans-serif;
+  font-family: Roboto, sans-serif;
 }
 
 .contanier {
@@ -80,7 +80,7 @@ body {
 .logo {
   width: 145px;
   height: 31px;
-  font-family: getFont("Raleway-font"), sans-serif;
+  font-family: Raleway, sans-serif;
   font-weight: 700;
   font-size: 26px;
   line-height: 1.19;
@@ -153,7 +153,7 @@ body {
   border: #F5F4FA;
   color: #212121;
   text-align: center;
-  font-family: "Roboto";
+  font-family: Roboto, sans-serif;
   font-size: 16px;
   font-style: normal;
   font-weight: 500;
@@ -223,7 +223,7 @@ body {
 
 .box__text {
   color: #FFF;
-  font-family: "Roboto";
+  font-family: Roboto, sans-serif;
   font-size: 18px;
   font-style: normal;
   font-weight: 400;
@@ -252,7 +252,7 @@ body {
   height: 252px;
 }
 .footer__logo {
-  font-family: "Raleway", sans-serif;
+  font-family: Raleway, sans-serif;
   font-weight: 700;
   font-size: 26px;
   line-height: 1.19;
