--- a/SASS/components/_electricity.scss
+++ b/SASS/components/_electricity.scss
@@ -37,7 +37,7 @@
         padding-top: 27px;
         background: rgba(47, 48, 58, 0.80);
         color: getColor('secondary');
-        font-family: 'Roboto';
+        font-family: getFonts('Roboto-font');
         font-size: 14px;
         font-weight: 700;
         letter-spacing: 0.42px;
