--- a/SASS/components/_features.scss
+++ b/SASS/components/_features.scss
@@ -14,7 +14,7 @@
     }
 
     &__subtitle{
-        font-family: 'Roboto';
+        font-family: getFonts('Roboto-font');
         font-weight: 700;
         font-size: 14px;
         line-height: 1.14;
@@ -23,7 +23,7 @@
     }
 
     &__paragraf{
-        font-family: 'Roboto';
+        font-family: getFonts('Roboto-font');
         font-weight: 400;
         font-size: 14px;
         line-height: 1.71;
