--- a/SASS/portfolio.scss
+++ b/SASS/portfolio.scss
@@ -1,4 +1,6 @@
 @import "./variables.scss";
+@import "./utils/mixin";
+@import "./utils/placeholders";
 @import "./base/common";
 @import "./components/header";
 @import "./components/portfolio-bth";
