--- a/CSS/main.css
+++ b/CSS/main.css
@@ -1,3 +1,15 @@
+.list-links__item, .list-links, .clients-list__item, .clients-list, .social-list__item, .social-list, .people-list, .features-list, .hero__btn, .header-list, .header__container, .menu-right, .navigation {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.hero {
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
 h1,
 h2,
 h3,
@@ -29,29 +41,21 @@ body {
 }
 
 .navigation {
-  display: flex;
   width: 520px;
-  justify-content: space-between;
-  align-items: center;
   padding: 24px 0px;
 }
 
 .menu-right {
-  align-items: center;
   width: 333px;
-  display: flex;
-  justify-content: space-between;
   padding: 0;
 }
 
 .menu-right__link {
-  text-decoration: none;
   color: #757575;
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.02em;
-  list-style: none;
 }
 .menu-right__link:hover, .menu-right__link:focus {
   color: #2196F3;
@@ -72,9 +76,6 @@ body {
 .header__container {
   width: 1200px;
   margin: 0 auto;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
 }
 
 .logo {
@@ -86,16 +87,12 @@ body {
   line-height: 1.19;
   letter-spacing: 0.03em;
   color: #212121;
-  text-decoration: none;
 }
 .logo__web {
   color: #2196F3;
 }
 
 .header-list {
-  display: flex;
-  justify-content: space-between;
-  list-style: none;
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
@@ -106,7 +103,7 @@ body {
 .header-list__item {
   font-weight: 500;
   font-size: 14px;
-  line-height: 1, 14;
+  line-height: 1.14;
   letter-spacing: 0.02em;
   position: relative;
 }
@@ -139,23 +136,20 @@ body {
   background-color: rgba(47, 48, 58, 0.8);
   padding: 200px 0;
   background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../Image/Img.jpg");
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
 }
 .hero__title {
   font-weight: 900;
   font-size: 44px;
   line-height: 1.36;
-  text-align: center;
   letter-spacing: 0.06em;
+  text-align: center;
   text-transform: uppercase;
   color: #FFF;
   margin-bottom: 30px;
 }
 .hero__btn {
   margin: 0 auto;
-  display: block;
+  justify-content: center;
   width: 216px;
   height: 50px;
   background-color: #2196F3;
@@ -164,7 +158,6 @@ body {
   font-weight: 700;
   font-size: 16px;
   line-height: 1.88;
-  text-align: center;
   letter-spacing: 0.06em;
   color: #FFF;
   cursor: pointer;
@@ -235,10 +228,10 @@ body {
 .hero-modal__text {
   margin: 20px 6px 30px 6px;
   color: #757575;
-  font-size: 14px;
   font-weight: 400;
-  line-height: 24px;
-  letter-spacing: 0.42px;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
 }
 .hero-modal__checkbox {
   margin-right: 7px;
@@ -247,9 +240,9 @@ body {
 }
 .hero-modal__link {
   color: #2196F3;
-  font-size: 14px;
   font-style: normal;
   font-weight: 400;
+  font-size: 14px;
   line-height: 24px;
   letter-spacing: 0.42px;
   text-decoration-line: underline;
@@ -263,8 +256,8 @@ body {
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.2);
   color: #FFF;
   text-align: center;
-  font-size: 16px;
   font-weight: 700;
+  font-size: 16px;
   line-height: 30px;
   letter-spacing: 0.96px;
   margin: 0 120px 0;
@@ -273,10 +266,11 @@ body {
 .hero-modal__title {
   color: #212121;
   text-align: center;
-  font-size: 20px;
-  font-weight: 700;
-  letter-spacing: 0.6px;
   margin-bottom: 12px;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: normal;
+  letter-spacing: 0.6px;
 }
 
 .modal-list {
@@ -288,8 +282,9 @@ body {
   display: flex;
   flex-direction: column;
   color: #757575;
-  font-size: 12px;
   font-weight: 400;
+  font-size: 12px;
+  line-height: normal;
   letter-spacing: 0.12px;
   position: relative;
 }
@@ -339,14 +334,16 @@ body {
 }
 .modal-list__textarea::-moz-placeholder {
   color: #757575;
-  font-size: 12px;
   font-weight: 400;
+  font-size: 12px;
+  line-height: normal;
   letter-spacing: 0.12px;
 }
 .modal-list__textarea::placeholder {
   color: #757575;
-  font-size: 12px;
   font-weight: 400;
+  font-size: 12px;
+  line-height: normal;
   letter-spacing: 0.12px;
 }
 
@@ -356,9 +353,6 @@ body {
 }
 
 .features-list {
-  list-style: none;
-  display: flex;
-  justify-content: center;
   margin: 94px 0px 0px 0px;
 }
 .features-list__item:nth-child(-n+3) {
@@ -402,6 +396,7 @@ body {
   font-weight: 700;
   font-size: 36px;
   line-height: 1.16;
+  letter-spacing: normal;
 }
 
 .electricity-list {
@@ -430,8 +425,9 @@ body {
   background: rgba(47, 48, 58, 0.8);
   color: #FFF;
   font-family: Roboto, sans-serif;
-  font-size: 14px;
   font-weight: 700;
+  font-size: 14px;
+  line-height: normal;
   letter-spacing: 0.42px;
   text-transform: uppercase;
 }
@@ -445,12 +441,11 @@ body {
   font-weight: 700;
   font-size: 36px;
   line-height: 1.16;
+  letter-spacing: normal;
   margin: 0px 0px 50px;
 }
 
 .people-list {
-  list-style: none;
-  display: flex;
   justify-content: center;
 }
 .people-list__item {
@@ -486,23 +481,18 @@ body {
 }
 
 .social-list {
-  display: flex;
-  justify-content: space-between;
   width: 206px;
   margin: 16px auto 30px;
   padding: 0px;
 }
 .social-list__item {
-  display: flex;
-  align-items: center;
-  justify-content: center;
   width: 44px;
   height: 44px;
 }
-.social-list__item__item:hover, .social-list__item:focus {
+.social-list__item:hover, .social-list__item:focus {
   border-radius: 50%;
   background-color: #2196F3;
-  transition: background-color 0.2s ease-in;
+  transition: background-color 500ms ease-in;
   box-shadow: 0px 0px 23px 2px rgba(0, 0, 0, 0.56);
   -webkit-box-shadow: 0px 0px 23px 2px rgba(0, 0, 0, 0.56);
   -moz-box-shadow: 0px 0px 23px 2px rgba(0, 0, 0, 0.56);
@@ -522,20 +512,15 @@ body {
 .clients__title {
   color: #212121;
   text-align: center;
-  font-size: 36px;
   font-style: normal;
   font-weight: 700;
+  font-size: 36px;
+  line-height: normal;
   letter-spacing: 1.08px;
   margin-bottom: 50px;
 }
 
-.clients-list {
-  display: flex;
-  justify-content: space-between;
-}
 .clients-list__item {
-  display: flex;
-  align-items: center;
   justify-content: center;
   width: 170px;
   height: 92px;
@@ -571,7 +556,6 @@ body {
   line-height: 1.19;
   letter-spacing: 0.03em;
   color: #FFF;
-  text-decoration: none;
 }
 
 .footer-content {
@@ -594,7 +578,6 @@ body {
 }
 
 .contact-list {
-  list-style: none;
   padding: 0;
 }
 .contact-list__item {
@@ -605,7 +588,6 @@ body {
   margin: 9px 0px;
 }
 .contact-list a {
-  text-decoration: none;
   font-weight: 400;
   font-size: 14px;
   line-height: 1.71;
@@ -619,24 +601,19 @@ body {
 .footer-links__title {
   margin-bottom: 20px;
   color: #FFF;
-  font-size: 14px;
-  font-style: normal;
   font-weight: 700;
-  letter-spacing: 0.42px;
+  font-size: 14px;
+  line-height: 0.42px;
+  letter-spacing: normal;
+  font-style: normal;
   text-transform: uppercase;
 }
 
-.list-links {
-  display: flex;
-  justify-content: space-between;
-}
 .list-links__item {
   width: 44px;
   height: 44px;
   background-color: rgba(255, 255, 255, 0.1019607843);
   border-radius: 50%;
-  display: flex;
-  align-items: center;
   justify-content: center;
 }
 .list-links__item:nth-child(-n+3) {
@@ -664,8 +641,8 @@ body {
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
   color: #FFF;
   text-align: center;
-  font-size: 16px;
   font-weight: 700;
+  font-size: 16px;
   line-height: 30px;
   letter-spacing: 0.96px;
   display: flex;
@@ -699,8 +676,9 @@ body {
 }
 .footer-form__label {
   color: #FFF;
-  font-size: 14px;
   font-weight: 700;
+  font-size: 14px;
+  line-height: normal;
   letter-spacing: 0.42px;
   text-transform: uppercase;
 }
