--- a/SASS/components/_features.scss
+++ b/SASS/components/_features.scss
@@ -4,9 +4,7 @@
 }
 
 .features-list {
-    list-style: none;
-    display: flex;
-    justify-content: center;
+    @extend %flex;
     margin: 94px 0px 0px 0px;
 
     &__item:nth-child(-n+3) {
@@ -15,19 +13,13 @@
 
     &__subtitle{
         font-family: getFonts('Roboto-font');
-        font-weight: 700;
-        font-size: 14px;
-        line-height: 1.14;
-        letter-spacing: 0.03em;
+        @include font(700, 14px, 1.14, 0.03em);
         margin-bottom: 10px;
     }
 
     &__paragraf{
         font-family: getFonts('Roboto-font');
-        font-weight: 400;
-        font-size: 14px;
-        line-height: 1.71;
-        letter-spacing: 0.03em;
+        @include font(400, 14px, 1.71, 0.03em);
         color: getColor('third');
         margin: 0px 30px 0px 0px;
     }
