--- a/SASS/components/_people.scss
+++ b/SASS/components/_people.scss
@@ -4,9 +4,7 @@
 
     &__title {
         text-align: center;
-        font-weight: 700;
-        font-size: 36px;
-        line-height: 1.16;
+        @include font(700, 36px, 1.16, normal);
         margin: 0px 0px 50px;
     }
 }
@@ -14,8 +12,7 @@
 
 
 .people-list {
-    list-style: none;
-    display: flex;
+    @extend %flex;
     justify-content: center;
 
     &__item {
@@ -37,42 +34,34 @@
     &__name {
         text-align: center;
         font-family: getFonts('Roboto-font');
-        font-weight: 500;
-        font-size: 16px;
-        line-height: 1.18;
-        letter-spacing: 0.03em;
+        @include font(500, 16px, 1.18, 0.03em);
         margin: 30px 0px 10px;
     }
 
     &__work {
         text-align: center;
         font-family: getFonts('Roboto-font');
-        font-weight: 400;
-        font-size: 16px;
-        line-height: 1.18;
-        letter-spacing: 0.03em;
+        @include font(400, 16px, 1.18, 0.03em);
         color: getColor('third');
     }
 }
 
 .social-list {
-    display: flex;
-    justify-content: space-between;
+    @extend %flex;
     width: 206px;
     margin: 16px auto 30px;
     padding: 0px;
 
     &__item {
-        display: flex;
-        align-items: center;
-        justify-content: center;
+        @extend %flex;
         width: 44px;
         height: 44px;
+        // background-color: getColor('fourth');
 
-        &__item:hover, &:focus {
+        &:hover, &:focus {
             border-radius: 50%;
             background-color: getColor('hover');
-            transition: background-color 0.2s ease-in;
+            transition: background-color 500ms ease-in;
             box-shadow: 0px 0px 23px 2px rgba(0, 0, 0, 0.56);
             -webkit-box-shadow: 0px 0px 23px 2px rgba(0, 0, 0, 0.56);
             -moz-box-shadow: 0px 0px 23px 2px rgba(0, 0, 0, 0.56);
