--- a/SASS/components/_portfolio-main.scss
+++ b/SASS/components/_portfolio-main.scss
@@ -4,19 +4,13 @@
 }
 
 .cards-list__title {
-    font-weight: 700;
-    font-size: 18px;
-    line-height: 2;
-    letter-spacing: 0.06em;
+    @include font(700, 18px, 2, 0.06em);
     color: getColor('primary');
     margin: 20px 24px 0;
 }
 
 .cards-list__parag {
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 1.87;
-    letter-spacing: 0.03em;
+    @include font(400, 16px, 1.87, 0.03em);
     width: 322px;
     height: 30px;
     color: getColor('third');
@@ -31,11 +25,9 @@
 }
 
 .cards-list {
-    display: flex;
+    @extend %flex;
     flex-wrap: wrap;
-    justify-content: space-between;
     background: getColor('secondary');
-    list-style: none;
 }
 
 .cards-list__item {
@@ -51,11 +43,8 @@
 .box__text {
     color: getColor('secondary');
     font-family: getFonts('Roboto-font');
-    font-size: 18px;
     font-style: normal;
-    font-weight: 400;
-    line-height: 28px;
-    letter-spacing: 0.54px;
+    @include font(400, 18px, 28px, 0.54px);
     margin: 0;
 }
 
