--- a/SASS/main.scss
+++ b/SASS/main.scss
@@ -1,3 +1,5 @@
+@import "./utils/placeholders";
+@import "./utils/mixin";
 @import "./variables.scss";
 @import "./base/common";
 @import "./components/header";
