--- a/SASS/main.scss
+++ b/SASS/main.scss
@@ -1,6 +1,6 @@
 @import "./utils/placeholders";
 @import "./utils/mixin";
-@import "./variables.scss";
+@import "./utils/variables.scss";
 @import "./base/common";
 @import "./components/header";
 @import "./components/hero";
