--- a/SASS/portfolio.scss
+++ b/SASS/portfolio.scss
@@ -1,4 +1,4 @@
-@import "./variables.scss";
+@import "./utils/variables.scss";
 @import "./utils/mixin";
 @import "./utils/placeholders";
 @import "./base/common";
