--- a/SASS/components/_people.scss
+++ b/SASS/components/_people.scss
@@ -54,6 +54,7 @@
 
     &__item {
         @extend %flex;
+        justify-content: center;
         width: 44px;
         height: 44px;
         // background-color: getColor('fourth');
