--- a/SASS/components/_clients.scss
+++ b/SASS/components/_clients.scss
@@ -43,3 +43,33 @@
         transition: fill 0.3s ease-in;
     }
 }
+
+@media screen and (max-width: 1200){
+    .clients-list{
+        width: 1200px;
+    }
+}
+
+@media screen and (max-width: 768) {
+    .clients{
+        width: 768px;
+        &__title{
+            @include font(700, 28px, normal, 1.08px);
+            width: 314px;
+        }
+        &-list{
+            // width: 768px;
+            display: flex;
+            flex-wrap: wrap;
+            &__item{
+                width: 226px;
+                height: 92px;
+                margin-right: 30px;
+                
+            }
+            &__icon {
+                padding: 50px;
+            }
+        }
+    }
+}
