--- a/SASS/components/_features.scss
+++ b/SASS/components/_features.scss
@@ -37,3 +37,42 @@
         margin: 0 auto;
     }
 }
+
+@media screen and (max-width: 1200px) {
+    .features {
+        width: 1200px;
+    }
+
+    .features-list {
+        margin: 94px 15px 0px 15px;
+
+        &__item:nth-child(-n+3) {
+            margin: 0 30px 0 0;
+        }
+    }
+}
+
+@media screen and (max-width:768px) {
+    .features{
+        width: 768px;
+    }
+    .features-list{
+        flex-wrap: wrap;
+        width: 768px;
+        margin: 94px 15px 0px 15px;
+        justify-content: start;
+        
+        &__item:nth-child(-n+2) {
+            margin: 0 30px 30px 0;
+        }
+        &__cart{
+            width: 354px;
+            height: 120px;
+        }
+        &__paragraf{
+            margin: 0;
+            width: 354px;
+            height: 48px;
+        }
+    }
+}
