--- a/CSS/main.css
+++ b/CSS/main.css
@@ -186,6 +186,14 @@ body {
     width: 54px;
   }
 }
+@media screen and (max-width: 480px) {
+  .header__container {
+    width: 480px;
+  }
+  .menu-right, .header-list {
+    display: none;
+  }
+}
 .hero {
   background-color: rgba(47, 48, 58, 0.8);
   padding: 200px 0;
@@ -455,6 +463,10 @@ body {
 }
 @media screen and (max-width: 768px) {
   .hero {
+    background-color: rgba(47, 48, 58, 0.8);
+    padding: 200px 0;
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../../Image/tablet.png");
+    background-size: cover;
     width: 768px;
     padding: 118px;
   }
@@ -503,6 +515,17 @@ body {
     width: 370px;
     height: 120px;
     padding: 12px 16px;
+  }
+}
+@media screen and (max-width: 480px) {
+  .hero {
+    width: 480px;
+    height: 400px;
+    padding: 0;
+    background-color: rgba(47, 48, 58, 0.8);
+    padding: 200px 0;
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../../Image/mobile.png");
+    background-size: cover;
   }
 }
 .features {
@@ -564,7 +587,7 @@ body {
     flex-wrap: wrap;
     width: 768px;
     margin: 94px 15px 0px 15px;
-    justify-content: start;
+    justify-content: flex-start;
   }
   .features-list__item:nth-child(-n+2) {
     margin: 0 30px 30px 0;
@@ -577,6 +600,33 @@ body {
     margin: 0;
     width: 354px;
     height: 48px;
+  }
+}
+@media screen and (max-width: 480px) {
+  .features {
+    width: 480px;
+  }
+  .features-list {
+    width: 480px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin: 94px 0 0 0;
+  }
+  .features-list__item:nth-child(-n+3) {
+    margin: 0 0 0 0;
+  }
+  .features-list__cart {
+    width: 450px;
+    height: 120px;
+  }
+  .features-list__subtitle {
+    text-align: center;
+  }
+  .features-list__paragraf {
+    margin: 0;
+    width: 450px;
+    height: 50px;
   }
 }
 .electricity {
@@ -630,6 +680,11 @@ body {
   }
 }
 @media screen and (max-width: 768px) {
+  .electricity {
+    display: none;
+  }
+}
+@media screen and (max-width: 480px) {
   .electricity {
     display: none;
   }
@@ -731,7 +786,7 @@ body {
     margin: 0 277px 30px;
   }
   .people-list {
-    justify-content: start;
+    justify-content: flex-start;
     width: 768px;
     display: flex;
     flex-wrap: wrap;
@@ -746,6 +801,36 @@ body {
   .people-list__photo {
     width: 356px;
     height: 374px;
+  }
+}
+@media screen and (max-width: 480px) {
+  .people {
+    padding: 60px 0;
+    width: 480px;
+  }
+  .people__title {
+    width: 205px;
+    height: 33px;
+    margin: 0 137px 30px;
+  }
+  .people-list {
+    justify-content: center;
+    width: 480px;
+  }
+  .people-list__item {
+    width: 450px;
+    height: 622px;
+    margin: 0;
+  }
+  .people-list__item:nth-child(-n+3) {
+    margin: 0 0 30px;
+  }
+  .people-list__photo {
+    width: 450px;
+    height: 460px;
+  }
+  .contanier {
+    width: 480px;
   }
 }
 .clients {
@@ -786,13 +871,14 @@ body {
   transition: fill 0.3s ease-in;
 }
 
-@media screen and (max-width: 1200) {
+@media screen and (max-width: 1200px) {
   .clients-list {
     width: 1200px;
   }
 }
-@media screen and (max-width: 768) {
+@media screen and (max-width: 768px) {
   .clients {
+    padding: 60px 0;
     width: 768px;
   }
   .clients__title {
@@ -801,18 +887,52 @@ body {
     line-height: normal;
     letter-spacing: 1.08px;
     width: 314px;
+    margin: 0 auto 30px;
   }
   .clients-list {
+    width: 768px;
     display: flex;
     flex-wrap: wrap;
+    padding: 0 15px;
   }
   .clients-list__item {
     width: 226px;
     height: 92px;
-    margin-right: 30px;
+    margin: 0 30px 30px 0;
   }
-  .clients-list__icon {
-    padding: 50px;
+  .clients-list__item:nth-child(n+4) {
+    margin: 0 30px 0 0;
+  }
+  .clients-list__item:nth-child(3) {
+    margin: 0 0 30px;
+  }
+  .clients-list__item:nth-child(6) {
+    margin: 0;
+  }
+}
+@media screen and (max-width: 480px) {
+  .clients {
+    width: 480px;
+  }
+  .clients__title {
+    width: 314px;
+    margin: 0 auto 30px;
+  }
+  .clients-list {
+    width: 480px;
+    display: flex;
+    flex-wrap: wrap;
+  }
+  .clients-list__item {
+    width: 210px;
+    height: 92px;
+    margin: 0 0 30px 0;
+  }
+  .clients-list__item:nth-child(2n) {
+    margin: 0 0 30px 0;
+  }
+  .clients-list__item:nth-child(n+5) {
+    margin: 0;
   }
 }
 .footer {
@@ -930,9 +1050,7 @@ body {
     -moz-box-shadow: 1px 3px 18px 0px rgba(0, 0, 0, 0.75);
   }
   100% {
-    box-shadow: 1px 3px 18px 19px rgba(0, 0, 0, 0.75);
-    -webkit-box-shadow: 1px 3px 18px 19px rgba(0, 0, 0, 0.75);
-    -moz-box-shadow: 1px 3px 18px 19px rgba(0, 0, 0, 0.75);
+    box-shadow: 0px 0px 7px 10px rgba(0, 0, 0, 0.75);
   }
 }
 .subscribe {
@@ -970,8 +1088,67 @@ body {
   height: 24px;
 }
 
-@media screen and (max-width: 1200) {
+@media screen and (max-width: 1200px) {
   .footer {
     width: 1200px;
+  }
+  .footer-content {
+    display: flex;
+    justify-content: center;
+  }
+}
+@media screen and (max-width: 768px) {
+  .footer {
+    width: 768px;
+    display: flex;
+    flex-wrap: wrap;
+  }
+  .footer-contact {
+    margin: 0 165px 0 76px;
+    text-align: center;
+  }
+  .footer-links {
+    margin-right: 89px;
+    padding: 0;
+  }
+  .footer-links__title {
+    padding-top: 12px;
+    margin-left: 46px;
+    width: 146px;
+    height: 16px;
+  }
+}
+@media screen and (max-width: 480px) {
+  .footer {
+    width: 480px;
+    height: 603px;
+    flex-wrap: nowrap;
+  }
+  .footer-links {
+    width: 206px;
+    height: 80px;
+    margin: 0 auto;
+  }
+  .footer-content {
+    width: 480px;
+    height: 603px;
+    flex-wrap: wrap;
+  }
+  .footer-contact {
+    width: 232px;
+    height: 127px;
+    margin: 0 124px;
+  }
+  .subscribe {
+    margin: 0;
+    padding: 0;
+    width: 450px;
+    height: 170px;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+  }
+  .footer-form__email {
+    width: 450px;
   }
 }/*# sourceMappingURL=main.css.map */
