--- a/CSS/portfolio.css
+++ b/CSS/portfolio.css
@@ -180,6 +180,14 @@ body {
     width: 54px;
   }
 }
+@media screen and (max-width: 480px) {
+  .header__container {
+    width: 480px;
+  }
+  .menu-right, .header-list {
+    display: none;
+  }
+}
 .section-bth {
   margin: 94px 0px 50px;
 }
@@ -402,9 +410,7 @@ body {
     -moz-box-shadow: 1px 3px 18px 0px rgba(0, 0, 0, 0.75);
   }
   100% {
-    box-shadow: 1px 3px 18px 19px rgba(0, 0, 0, 0.75);
-    -webkit-box-shadow: 1px 3px 18px 19px rgba(0, 0, 0, 0.75);
-    -moz-box-shadow: 1px 3px 18px 19px rgba(0, 0, 0, 0.75);
+    box-shadow: 0px 0px 7px 10px rgba(0, 0, 0, 0.75);
   }
 }
 .subscribe {
@@ -442,8 +448,67 @@ body {
   height: 24px;
 }
 
-@media screen and (max-width: 1200) {
+@media screen and (max-width: 1200px) {
   .footer {
     width: 1200px;
+  }
+  .footer-content {
+    display: flex;
+    justify-content: center;
+  }
+}
+@media screen and (max-width: 768px) {
+  .footer {
+    width: 768px;
+    display: flex;
+    flex-wrap: wrap;
+  }
+  .footer-contact {
+    margin: 0 165px 0 76px;
+    text-align: center;
+  }
+  .footer-links {
+    margin-right: 89px;
+    padding: 0;
+  }
+  .footer-links__title {
+    padding-top: 12px;
+    margin-left: 46px;
+    width: 146px;
+    height: 16px;
+  }
+}
+@media screen and (max-width: 480px) {
+  .footer {
+    width: 480px;
+    height: 603px;
+    flex-wrap: nowrap;
+  }
+  .footer-links {
+    width: 206px;
+    height: 80px;
+    margin: 0 auto;
+  }
+  .footer-content {
+    width: 480px;
+    height: 603px;
+    flex-wrap: wrap;
+  }
+  .footer-contact {
+    width: 232px;
+    height: 127px;
+    margin: 0 124px;
+  }
+  .subscribe {
+    margin: 0;
+    padding: 0;
+    width: 450px;
+    height: 170px;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+  }
+  .footer-form__email {
+    width: 450px;
   }
 }/*# sourceMappingURL=portfolio.css.map */
