--- a/SASS/components/_clients.scss
+++ b/SASS/components/_clients.scss
@@ -44,31 +44,68 @@
     }
 }
 
-@media screen and (max-width: 1200){
+@media screen and (max-width: 1200px){
     .clients-list{
         width: 1200px;
     }
 }
 
-@media screen and (max-width: 768) {
+@media screen and (max-width: 768px) {
     .clients{
+        padding: 60px 0;
         width: 768px;
         &__title{
             @include font(700, 28px, normal, 1.08px);
             width: 314px;
+            margin: 0 auto 30px;
         }
         &-list{
-            // width: 768px;
+            width: 768px;
             display: flex;
             flex-wrap: wrap;
+            padding: 0 15px;
             &__item{
                 width: 226px;
                 height: 92px;
-                margin-right: 30px;
-                
+                margin: 0 30px 30px 0;
+                &:nth-child(n+4){
+                    margin: 0 30px 0 0;
+                }
+                &:nth-child(3){
+                    margin: 0 0 30px;
+                }
+                &:nth-child(6){
+                    margin: 0;
+                }
             }
-            &__icon {
-                padding: 50px;
+        }
+    }
+}
+
+@media screen and (max-width: 480px){
+    .clients{
+        width: 480px;
+        &__title {
+            width: 314px;
+            margin: 0 auto 30px;
+        }
+        
+        &-list {
+            width: 480px;
+            display: flex;
+            flex-wrap: wrap;
+        
+            &__item {
+                width: 210px;
+                height: 92px;
+                margin: 0 0 30px 0;
+        
+                &:nth-child(2n) {
+                    margin: 0 0 30px 0;
+                }
+                &:nth-child(n+5){
+                    margin: 0;
+                }
             }
         }
     }
