--- a/SASS/components/_features.scss
+++ b/SASS/components/_features.scss
@@ -60,7 +60,7 @@
         flex-wrap: wrap;
         width: 768px;
         margin: 94px 15px 0px 15px;
-        justify-content: start;
+        justify-content: flex-start;
         
         &__item:nth-child(-n+2) {
             margin: 0 30px 30px 0;
@@ -74,5 +74,38 @@
             width: 354px;
             height: 48px;
         }
+    }
+}
+
+@media screen and (max-width:480px){
+    .features{
+        width: 480px;
+
+    }
+    .features-list{
+        width: 480px;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        margin: 94px 0 0 0;
+
+        &__item:nth-child(-n+3) {
+                margin: 0 0 0 0;
+            }
+        
+            &__cart {
+                width: 450px;
+                height: 120px;
+            }
+
+            &__subtitle{
+                text-align: center;
+            }
+        
+            &__paragraf {
+                margin: 0;
+                width: 450px;
+                height: 50px;
+            }
     }
 }
