--- a/SASS/components/_header.scss
+++ b/SASS/components/_header.scss
@@ -142,3 +142,12 @@
         }
     }
 }
+
+@media screen and (max-width: 480px){
+    .header__container{
+        width: 480px;
+    }
+    .menu-right, .header-list{
+        display: none;
+    }
+}
