--- a/SASS/components/_people.scss
+++ b/SASS/components/_people.scss
@@ -100,7 +100,7 @@
         }
     }
     .people-list{
-        justify-content: start;
+        justify-content: flex-start;
         width: 768px;
         display: flex;
         flex-wrap: wrap;
@@ -115,5 +115,38 @@
         width: 356px;
         height: 374px;
     }
+    }
+}
+
+@media screen and (max-width: 480px){
+    .people{
+        padding: 60px 0;
+        width: 480px;
+        &__title {
+                width: 205px;
+                height: 33px;
+                margin: 0 137px 30px;
+                
+        }
+    }
+    .people-list {
+        justify-content: center;
+        width: 480px;
+        &__item {
+            width: 450px;
+            height: 622px;
+            margin: 0;
+            &:nth-child(-n+3){
+                margin: 0 0 30px;
+            }
+            }
+        
+            &__photo {
+                width: 450px;
+                height: 460px;
+            }
+    }
+    .contanier{
+        width: 480px;
     }
 }
