--- a/CSS/main.css
+++ b/CSS/main.css
@@ -586,11 +586,14 @@ body {
   .features-list {
     flex-wrap: wrap;
     width: 768px;
-    margin: 94px 15px 0px 15px;
-    justify-content: flex-start;
+    margin: 94px 0 0;
+    justify-content: center;
   }
   .features-list__item:nth-child(-n+2) {
     margin: 0 30px 30px 0;
+  }
+  .features-list__item:nth-child(2) {
+    margin: 0 0 30px;
   }
   .features-list__cart {
     width: 354px;
@@ -774,7 +777,7 @@ body {
   .people {
     width: 768px;
     margin-top: 60px;
-    padding: 60px 15px;
+    padding: 60px 0;
   }
   .people__title {
     width: 205px;
@@ -786,7 +789,7 @@ body {
     margin: 0 277px 30px;
   }
   .people-list {
-    justify-content: flex-start;
+    justify-content: center;
     width: 768px;
     display: flex;
     flex-wrap: wrap;
@@ -797,6 +800,9 @@ body {
   }
   .people-list__item:nth-child(-n+2) {
     margin-bottom: 30px;
+  }
+  .people-list__item:nth-child(2) {
+    margin: 0 0 30px;
   }
   .people-list__photo {
     width: 356px;
@@ -936,7 +942,7 @@ body {
   }
 }
 .footer {
-  padding: 60px 0;
+  padding: 60px 215px;
   background-color: #2F303A;
   height: 252px;
 }
@@ -1100,8 +1106,10 @@ body {
 @media screen and (max-width: 768px) {
   .footer {
     width: 768px;
+    height: 463px;
     display: flex;
     flex-wrap: wrap;
+    padding: 60px 0 0;
   }
   .footer-contact {
     margin: 0 165px 0 76px;
@@ -1117,12 +1125,26 @@ body {
     width: 146px;
     height: 16px;
   }
+  .footer-contact {
+    width: 232px;
+    height: 127px;
+  }
+  .footer-links {
+    width: 206px;
+    height: 80px;
+  }
+  .footer-content {
+    width: 768px;
+    height: 463px;
+    flex-wrap: wrap;
+  }
 }
 @media screen and (max-width: 480px) {
   .footer {
     width: 480px;
     height: 603px;
     flex-wrap: nowrap;
+    padding: 60px 0;
   }
   .footer-links {
     width: 206px;
