--- a/SASS/components/_features.scss
+++ b/SASS/components/_features.scss
@@ -59,11 +59,14 @@
     .features-list{
         flex-wrap: wrap;
         width: 768px;
-        margin: 94px 15px 0px 15px;
-        justify-content: flex-start;
+        margin: 94px 0 0;
+        justify-content: center;
         
         &__item:nth-child(-n+2) {
             margin: 0 30px 30px 0;
+        }
+        &__item:nth-child(2) {
+            margin: 0 0 30px;
         }
         &__cart{
             width: 354px;
