--- a/SASS/components/_footer.scss
+++ b/SASS/components/_footer.scss
@@ -157,6 +157,7 @@
 @media screen and (max-width: 1200px) {
     .footer{
         width: 1200px;
+        padding: 60px 0;
         &-content{
             display: flex;
             justify-content: center;
